--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -12,8 +12,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CoronaReporter</title>
     <base href="~/" />
+    <script src="_content/MatBlazor/dist/matBlazor.js"></script>
+    <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
+    <script src="js/interop.js"></script>
 </head>
 <body>
     <app>
