--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,4 +1,8 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
+﻿@using Microsoft.AspNetCore.Hosting
+@using Microsoft.Extensions.Hosting
+@inject IWebHostEnvironment Env
+
+<div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">CoronaReporter</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
@@ -13,15 +17,28 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="high-risk-cases">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> High-Risk Cases
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="low-risk-cases">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Low-Risk Cases
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="call-center">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Call Center
+            </NavLink>
+        </li>
+        @if (Env.IsDevelopment())
+        {
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="dev">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Development
+                </NavLink>
+            </li>
+        }
     </ul>
 </div>
 
