--- a/_Imports.razor
+++ b/_Imports.razor
@@ -7,4 +7,5 @@
 @using Microsoft.JSInterop
 @using CoronaReporter
 @using CoronaReporter.Shared
-@using MatBlazor
+@using Blazorise
+@using Blazorise.DataGrid
